# dendec

./: .gitignore  Cargo.toml  LICENSE  readme.md
src/: cli.rs  crypto.rs  dna.rs  encoding.rs  error.rs  main.rs
src/refer/: chunk.rs  coordinate.rs  mod.rs  reverse.rs  table.rs
src/wrap/: classify.rs  fetch.rs  mod.rs  snapshot.rs  transform.rs
tools/build_table/: Cargo.toml
tools/build_table/src/: main.rs
