[workspace]
members = [".", "tools/build_table"]

[package]
name = "dendec"
version = "0.1.0"
edition = "2021"
description = "DNA Encode/Decode — password-based encrypted Unicode ↔ DNA encoding"
authors = ["dendec"]

[[bin]]
name = "dendec"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rpassword = "7"
argon2 = "0.5"
rand = "0.8"
chacha20poly1305 = "0.10"
thiserror = "1"
walkdir = "2"

[dev-dependencies]
hex = "0.4"
tempfile = "3"
